# TrashOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/: Cargo.toml
apps/boybox/: Cargo.toml
apps/src/: counter.rs  hello  hello.rs  hello2  hello2.rs  lib.rs  memory.rs  stdio.rs  unwind.rs
apps/src/syscall/: mod.rs  naked.rs  operations.rs
apps/std/: Cargo.toml
apps/std/src/: lib.rs  memory.rs  stdio.rs
apps/std/src/syscall/: macro.rs  mod.rs
boot/: Cargo.toml
boot/src/: main.rs
builder/: Cargo.toml  build.rs  limine.cfg
builder/assets/: BOOTX64.EFI  limine.conf
builder/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: buffer.rs  lib.rs  log.rs  main.rs  printk.rs  unwind.rs
kernel/src/arch/: acpi.rs  apic.rs  gdt.rs  hpet.rs  interrupts.rs  mod.rs  smp.rs
kernel/src/arch/acpi/: handler.rs  mod.rs  power.rs
kernel/src/arch/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/console/: log.rs  mod.rs  printk.rs
kernel/src/device/: ahci.rs  display.rs  hpet.rs  keyboard.rs  log.rs  mod.rs  mouse.rs  nvme.rs  pci.rs  rtc.rs  serial.rs  terminal.rs  xhci.rs
kernel/src/driver/: ahci.rs  display.rs  hpet.rs  log.rs  mod.rs  mouse.rs  nvme.rs  pci.rs  pcie.rs  rtc.rs  serial.rs  speaker.rs  terminal.rs  xhci.rs
kernel/src/driver/ahci/: driver.rs  hba.rs  identify.rs  mod.rs
kernel/src/driver/mouse/: driver.rs  event.rs  mod.rs  packet.rs  ports.rs
kernel/src/driver/term/: service.rs  writer.rs
kernel/src/drivers/: display.rs  hpet.rs  log.rs  nvme.rs  pcie.rs  serial.rs  xhci.rs
kernel/src/drivers/ahci/: cmd.rs  driver.rs  identify.rs  mod.rs
kernel/src/drivers/mouse/: mod.rs
kernel/src/drivers/term/: mod.rs  service.rs  writer.rs
kernel/src/io/: block.rs  manager.rs  mod.rs
kernel/src/mem/: dma.rs  frame.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs
kernel/src/memory/: bitmap.rs  dma.rs  frame.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs
kernel/src/syscall/: matcher.rs  mod.rs  operations.rs
kernel/src/task/: context.rs  mod.rs  process.rs  scheduler.rs  stack.rs  thread.rs  timer.rs
kernel/src/tasks/: kservice.rs  mod.rs  process.rs  thread.rs  timer.rs
src/: acpi.rs  allocator.rs  apic.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  log.rs  main.rs  memory.rs  mouse.rs  printk.rs  serial.rs  vga_buffer.rs
src/device/: keyboard.rs  mouse.rs  serial.rs
src/memory/: frame.rs  frame_allocator.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs
src/syscall/: matcher.rs  mod.rs
src/task/: context.rs  executor.rs  keyboard.rs  mod.rs  process.rs  scheduler.rs  stack.rs  thread.rs
src/task/syscall/: operations.rs
