cargo-features = ["per-package-target"]

[package]
name = "TrashOS"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[workspace]
members = ["boot"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1

[dependencies]
x86_64 = "0.14.10"
volatile = "0.4.6"
spin = "0.9.4"
uart_16550 = "0.2.18"
pc-keyboard = "0.6.1"
bootloader_api = "0.11.0"
acpi = "4.1.1"
x2apic = "0.4.1"
bitflags = "1.3.2"
slab_allocator_rs = "1.0.2"

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
features = ["regular", "size_20", "unicode-basic-latin"]
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.3"
features = ["alloc"]
default-features = false

[dependencies.futures-util]
version = "0.3.4"
features = ["alloc"]
default-features = false

[dependencies.conquer-once]
version = "0.3.2"
default-features = false
