cargo-features = ["per-package-target"]

[package]
name = "TrashOS"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[workspace]
members = ["builder"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1

[dependencies]
x86_64 = "0.14.10"
spin = "0.9.4"
uart_16550 = "0.3.0"
pc-keyboard = "0.7.0"
bootloader_api = "0.11.4"
acpi = "5.0.0"
x2apic = "0.4.1"
bitflags = "2.3.3"
linked_list_allocator = "0.10.5"

[dependencies.crossbeam-queue]
version = "0.3.8"
features = ["alloc"]
default-features = false

[dependencies.futures-util]
version = "0.3.4"
features = ["alloc"]
default-features = false

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.object]
version = "0.32.0"
features = ["read"]
default-features = false

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
features = ["regular", "size_20", "unicode-basic-latin"]
default-features = false
