[package]
name = "builder"
edition = "2024"
version = "0.1.0"

[dependencies]
argh = "0.1.13"
anyhow = "1.0.97"
ovmf-prebuilt = "0.2.2"

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]

[build-dependencies]
anyhow = "1.0.97"
tempfile = "3.19.0"
gpt = "4.1.0"
fatfs = "0.3.6"

[build-dependencies.kernel]
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"
