cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[dependencies]
x86_64 = "0.15.2"
spin = "0.9.8"
uart_16550 = "0.3.2"
pc-keyboard = "0.8.0"
acpi = "5.2.0"
x2apic = "0.5.0"
bitflags = "2.9.0"
good_memory_allocator = "0.1.7"
bit_field = "0.10.2"
limine = "0.4.0"
xhci = "0.9.2"
pci_types = "0.10.0"
vcell = "0.1.3"
os-terminal = "0.6.7"
nvme = "0.1.2"
humansize = "2.1.3"
derive-where = "1.2.7"
rustc-demangle = "0.1.24"

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]
default-features = false

[dependencies.time]
version = "0.3.39"
default-features = false

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.12"
features = ["alloc"]
default-features = false

[dependencies.object]
version = "0.36.7"
features = ["read_core", "elf", "unaligned"]
default-features = false

[dependencies.log]
version = "0.4.26"
default-features = false

[dependencies.unwinding]
version = "0.2.5"
default-features = false
features = ["unwinder", "fde-static", "personality", "panic"]
