cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[lints.clippy]
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"
collapsible_if = "allow"

[dependencies]
x86_64 = "0.15.2"
spin = "0.10.0"
uart_16550 = "0.3.2"
pc-keyboard = "0.8.0"
log = "0.4.27"
acpi = "5.2.0"
aml = "0.16.4"
x2apic = "0.5.0"
bitflags = "2.9.1"
good_memory_allocator = "0.1.7"
bit_field = "0.10.2"
limine = "0.5.0"
xhci = "0.9.2"
pci_types = "0.10.0"
vcell = "0.1.3"
os-terminal = "0.6.10"
humansize = "2.1.3"
derive-where = "1.5.0"
rustc-demangle = "0.1.25"
pastey = "0.1.0"
lru = "0.16.0"
gpt_disk_io = "0.16.2"
gpt_disk_types = "0.16.1"
# nvme = "0.2.2"
nvme = { path = "../../nvme" }

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]
default-features = false

[dependencies.time]
version = "0.3.41"
default-features = false

[dependencies.anyhow]
version = "1.0.98"
default-features = false

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.12"
features = ["alloc"]
default-features = false

[dependencies.object]
version = "0.37.1"
features = ["read_core", "elf", "unaligned"]
default-features = false

[dependencies.unwinding]
version = "0.2.7"
default-features = false
features = ["unwinder", "fde-static", "personality", "panic"]

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs.git"
rev = "4eccb50d011146fbed20e133d33b22f3c27292e7"
features = ["lfn", "alloc", "unicode"]
default-features = false
